manifests/argocd-ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-external
  namespace: argocd
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "Content-Security-Policy";
spec:
  tls:
    - hosts:
        - cd.realliance.net
      secretName: argocd-tls
  rules:
    - host: cd.realliance.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
